add get group endpoint to check update group(get after update in tests)
